--- a/src/styles/partials/_dev-projects.scss
+++ b/src/styles/partials/_dev-projects.scss
@@ -478,7 +478,7 @@ div.btn-div {
   align-self: flex-end;
 }
 
-div.tooltip {
+.dev-projects-container div.tooltip {
     display: none;
     justify-content: center;
     position: relative;
